@startuml
namespace engine {
    class engine.SoundFileType << (T, #FF7700) >>  {
    }
}



namespace game {
    class Ammo << (S,Aquamarine) >> {
        + Image *ebiten.Image
        + Pos Pos
        + Velocity int
        + ID string
        + Alive bool
        + MoveDirection int

        + GetSignature() string
        + Draw(screen *ebiten.Image) 
        + GetID() string
        + GetPos() Pos
        + GetImage() *ebiten.Image
        + GetSize() (int, int)
        + GetType() GameObjectType
        + Destroy() 
        + IsAlive() bool
        + GetCentrePos() Pos
        + Update() 

    }
    class Bullet << (S,Aquamarine) >> {
        + Image *ebiten.Image
        + Pos Pos
        + Velocity int
        + ID string
        + Alive bool
        + MoveDirection int
        + Signature string

        + GetSignature() string
        + Draw(screen *ebiten.Image) 
        + GetID() string
        + GetPos() Pos
        + GetImage() *ebiten.Image
        + GetSize() (int, int)
        + GetType() GameObjectType
        + Destroy() 
        + IsAlive() bool
        + GetCentrePos() Pos
        + Update() 

    }
    class DebugScreen << (S,Aquamarine) >> {
        + Text string

        + Draw(screen *ebiten.Image, g Game) 
        + Update(g Game) 

    }
    interface Game  {
        + GetMaxX() int
        + GetMaxY() int
        + AddGameObject(o GameObject) 
        + GetGameObjects() <font color=blue>map</font>[string]GameObject
        + GetSpaceship1() *Spaceship
        + GetSpaceship2() *Spaceship
        + GetUpdateCounter() int
        + Layout(outsideWidth int, outsideHeight int) (int, int)
        + Update(screen *ebiten.Image) error

    }
    interface GameObject  {
        + GetID() string
        + GetPos() Pos
        + GetCentrePos() Pos
        + GetImage() *ebiten.Image
        + GetType() GameObjectType
        + GetSize() (int, int)
        + Destroy() 
        + Draw(screen *ebiten.Image) 
        + Update() 
        + IsAlive() bool
        + GetSignature() string

    }
    class GameObjectImage << (S,Aquamarine) >> {
        + Image *ebiten.Image
        + Scale float64
        + Direction int

    }
    class Pos << (S,Aquamarine) >> {
        + X int
        + Y int

        + Print() string

    }
    class SkyObject << (S,Aquamarine) >> {
        + CurrentImage *GameObjectImage
        + AliveImage *GameObjectImage
        + DestroyedImage *GameObjectImage
        + Pos Pos
        + Velocity int
        + ID string
        + Alive bool
        + ImageScale float64

        + GetSignature() string
        + Draw(screen *ebiten.Image) 
        + IsAlive() bool
        + GetID() string
        + GetPos() Pos
        + GetImage() *ebiten.Image
        + GetSize() (int, int)
        + Destroy() 
        + GetCentrePos() Pos
        + GetType() GameObjectType
        + Update() 

    }
    class Spaceship << (S,Aquamarine) >> {
        + Image *GameObjectImage
        + Pos Pos
        + ID string
        + DamageCount int
        + Size int
        + ShootBullet bool
        + XAxisForce int
        + YAxisForce int
        + ShootSound *audio.Player
        + ImpulseSound *audio.Player
        + ImpactSound *audio.Player
        + BulletCount int
        + Health int
        + KilledEnemies int
        + KeyboardControlMap *SpaceshipKeyboardControlMap
        + GamepadControlMap *SpaceshipGamepadControlMap
        + MoveDirection int
        + SoundOn bool
        + Signature string

        + GetSignature() string
        + GetPos() Pos
        + GetID() string
        + GetSize() (int, int)
        + GetCentrePos() Pos
        + GetType() string
        + Update(g Game) 
        + Damage() 
        + Draw(screen *ebiten.Image) 
        + DrawState(screen *ebiten.Image, x int, y int) 

    }
    class SpaceshipGame << (S,Aquamarine) >> {
        + BackgroundImage *ebiten.Image
        + Spaceship1 *Spaceship
        + Spaceship2 *Spaceship
        + GameObjects <font color=blue>map</font>[string]GameObject
        + DebugScreen *DebugScreen
        + MaxX int
        + MaxY int
        + DebugPrint bool
        + BackgroundSound *audio.Player
        + UpdateCounter int
        + Pause bool
        + SoundOn bool
        + KilledEnemies int
        + State GameState
        + GamepadIDs <font color=blue>map</font>[int]<font color=blue>struct</font>{}

        + GetMaxX() int
        + GetMaxY() int
        + GetUpdateCounter() int
        + AddGameObject(o GameObject) 
        + GetGameObjects() <font color=blue>map</font>[string]GameObject
        + GetSpaceship1() *Spaceship
        + GetSpaceship2() *Spaceship
        + Reset() 
        + Update(screen *ebiten.Image) error
        + Draw(screen *ebiten.Image) 
        + Layout(outsideWidth int, outsideHeight int) (int, int)

    }
    class SpaceshipGamepadControlMap << (S,Aquamarine) >> {
        + Up ebiten.GamepadButton
        + Down ebiten.GamepadButton
        + Left ebiten.GamepadButton
        + Right ebiten.GamepadButton
        + Break ebiten.GamepadButton
        + Shoot ebiten.GamepadButton

    }
    class SpaceshipKeyboardControlMap << (S,Aquamarine) >> {
        + Up ebiten.Key
        + Down ebiten.Key
        + Left ebiten.Key
        + Right ebiten.Key
        + Break ebiten.Key
        + Shoot ebiten.Key

    }
    class Star << (S,Aquamarine) >> {
        + Image *ebiten.Image
        + Pos Pos
        + Velocity int
        + ID string
        + Alive bool
        + MoveDirection int

        + Draw(screen *ebiten.Image) 
        + GetSignature() string
        + GetID() string
        + GetPos() Pos
        + GetImage() *ebiten.Image
        + GetSize() (int, int)
        + GetType() GameObjectType
        + Destroy() 
        + IsAlive() bool
        + GetCentrePos() Pos
        + Update() 

    }
    class game.GameObjectType << (T, #FF7700) >>  {
    }
    class game.GameState << (T, #FF7700) >>  {
    }
}

"game.GameObject" <|-- "game.Ammo"
"game.GameObject" <|-- "game.Bullet"
"game.GameObject" <|-- "game.SkyObject"
"game.Game" <|-- "game.SpaceshipGame"
"game.GameObject" <|-- "game.Star"

"game.Ammo" o-- "ebiten.Image"
"game.Ammo" o-- "game.Pos"
"game.Bullet" o-- "ebiten.Image"
"game.Bullet" o-- "game.Pos"
"game.GameObjectImage" o-- "ebiten.Image"
"game.SkyObject" o-- "game.GameObjectImage"
"game.SkyObject" o-- "game.Pos"
"game.Spaceship" o-- "audio.Player"
"game.Spaceship" o-- "game.GameObjectImage"
"game.Spaceship" o-- "game.Pos"
"game.Spaceship" o-- "game.SpaceshipGamepadControlMap"
"game.Spaceship" o-- "game.SpaceshipKeyboardControlMap"
"game.SpaceshipGame" o-- "audio.Player"
"game.SpaceshipGame" o-- "ebiten.Image"
"game.SpaceshipGame" o-- "game.DebugScreen"
"game.SpaceshipGame" o-- "game.GameObject"
"game.SpaceshipGame" o-- "game.GameState"
"game.SpaceshipGame" o-- "game.Spaceship"
"game.SpaceshipGamepadControlMap" o-- "ebiten.GamepadButton"
"game.SpaceshipKeyboardControlMap" o-- "ebiten.Key"
"game.Star" o-- "ebiten.Image"
"game.Star" o-- "game.Pos"

"__builtin__.int" #.. "engine.SoundFileType"
"__builtin__.int64" #.. "game.GameObjectType"
"__builtin__.int64" #.. "game.GameState"
@enduml
